# GetHired

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  tailwind.config.js  vite.config.ts
jobsearch_agents/: agent.py  prompt.py  pyproject.toml
jobsearch_agents/jobsearch_agents/: agent.py  prompt.py  pyproject.toml
jobsearch_agents/jobsearch_agents/shared_libraries/: constants.py  file_utils.py
jobsearch_agents/jobsearch_agents/sub_agents/listing/: agent.py  prompt.py
jobsearch_agents/jobsearch_agents/sub_agents/research/: agent.py  prompt.py
jobsearch_agents/jobsearch_agents/sub_agents/resume/: agent.py  parse.py  prompt.py
jobsearch_agents/jobsearch_agents/tools/: firestore.py  store_state.py  web_search.py
jobsearch_agents/shared_libraries/: constants.py
jobsearch_agents/sub_agents/listing/: agent.py  prompt.py
jobsearch_agents/tools/: firebase.py  firestore.py
src/: App.tsx  firebase.ts  firebaseConfig.ts  main.tsx  types.ts
src/components/: ChatBot.tsx  JobCard.tsx  Layout.tsx
src/components/layout/: Header.tsx  SideBar.tsx
src/components/ui/: AgentCard.tsx  Button.tsx  Card.tsx  JobCard.tsx
src/context/: ThemeContext.ts  ThemeProvider.tsx  UserContext.tsx
src/contexts/: UserContext.tsx
src/data/: mockData.ts
src/pages/: ApplicationTracker.tsx  Auth.tsx  CompanyResearch.tsx  Dashboard.tsx  JobDiscovery.tsx  JobListings.tsx  Networking.tsx  Profile.tsx  ResumeTailoring.tsx  Settings.tsx
src/types/: index.ts
